--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Auth forms</title>
-
-    <!-- update with links to latest version of React:
-     https://facebook.github.io/react/downloads.html
-     -->
-    <script src="https://fb.me/react-0.14.3.js"></script>
-    <script src="https://fb.me/react-dom-0.14.3.js"></script>
+    <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
+    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
   </head>
   <body>
     <div id="container"></div>
