--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Auth forms</title>
+
+    <link rel="stylesheet" href="style.css">
+
     <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
   </head>
   <body>
     <div id="container"></div>
 
+    <script src="build/components/LoginForm.js"></script>
     <script src="build/main.js"></script>
   </body>
 </html>
